Fixed horizontal scroll

--- a/snake.css
+++ b/snake.css
@@ -3,7 +3,6 @@
 }
 
 body {
-    width: 100vw;
     padding: 5%;
     display: flex;
     background-color: rgb(207, 208, 209);
